@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-07-12T16:27:16Z",
+  "timestamp" : "2022-07-13T01:49:51Z",
   "count_outdated" : 2225,
   "uniques_outdated" : 475,
-  "count" : 2281,
+  "count" : 2282,
   "uniques" : 505,
   "clones" : [
     {
@@ -98,8 +98,8 @@
     },
     {
       "timestamp": "2022-07-12T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
