@@ -1,5 +1,5 @@
 {
-  "count": 56,
+  "count": 57,
   "uniques": 15,
   "clones": [
     {
@@ -69,7 +69,7 @@
     },
     {
       "timestamp": "2022-07-12T00:00:00Z",
-      "count": 2,
+      "count": 3,
       "uniques": 1
     }
   ]
