@@ -1,3 +1,10 @@
+2022-07-13T01:49:51Z:
+* notice: last 14d: unq all: 15 57
+* notice: prev accum: outdated-unq outdated-all / unq all: 475 2225 / 505 2281
+* notice: next accum: outdated-unq outdated-all / unq all: 475 2225 / 505 2282
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +3 -0 -0 / 1 3
+* notice: removed / changed dates: [] / [2022-07-12]
+
 2022-07-12T16:27:16Z:
 * notice: last 14d: unq all: 15 56
 * notice: prev accum: outdated-unq outdated-all / unq all: 474 2223 / 505 2279
